Created new interface for flights table view

--- a/Watch/Base.lproj/Interface.storyboard
+++ b/Watch/Base.lproj/Interface.storyboard
@@ -1,10 +1,62 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gAV-ed-FB1">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="10032"/>
     </dependencies>
     <scenes>
+        <!--My Fligths-->
+        <scene sceneID="ejr-99-fzJ">
+            <objects>
+                <controller identifier="Schedule" title="My Fligths" id="gAV-ed-FB1">
+                    <items>
+                        <table alignment="left" id="xrd-gR-NZv">
+                            <items>
+                                <tableRow identifier="FlightRow" id="zwc-9I-TIt">
+                                    <group key="rootItem" width="1" height="0.0" alignment="left" spacing="6" id="MUt-BR-2Px">
+                                        <items>
+                                            <separator height="1" heightAdjustment="-4" alignment="left" verticalAlignment="center" id="upU-zp-ifm">
+                                                <color key="color" red="0.98039215690000003" green="0.066666666669999999" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            </separator>
+                                            <group alignment="left" layout="vertical" spacing="0.0" id="Uet-OW-Cun">
+                                                <items>
+                                                    <group width="1" height="32" alignment="left" spacing="4" id="NSX-jv-NW5">
+                                                        <items>
+                                                            <label alignment="left" verticalAlignment="center" text="MAN" id="ER0-ih-S9P">
+                                                                <fontDescription key="font" type="system" weight="semibold" pointSize="20"/>
+                                                            </label>
+                                                            <imageView width="24" height="20" alignment="left" verticalAlignment="center" image="Plane" id="YtG-ZM-kGb">
+                                                                <color key="tintColor" red="0.98039215690000003" green="0.066666666669999999" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                            </imageView>
+                                                            <label alignment="left" verticalAlignment="center" text="SFO" id="NM4-SD-4jX">
+                                                                <fontDescription key="font" type="system" weight="semibold" pointSize="20"/>
+                                                            </label>
+                                                        </items>
+                                                    </group>
+                                                    <group width="1" alignment="left" id="bnl-Xh-CzF">
+                                                        <items>
+                                                            <label alignment="left" verticalAlignment="bottom" text="AA123" id="3al-Z5-ZJI">
+                                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                                <fontDescription key="font" style="UICTFontTextStyleCaption2"/>
+                                                            </label>
+                                                            <label alignment="right" verticalAlignment="bottom" text="On time" id="NYK-xe-n3I">
+                                                                <color key="textColor" red="0.015686274510000001" green="0.87058823529999996" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                                                <fontDescription key="font" style="UICTFontTextStyleCaption2"/>
+                                                            </label>
+                                                        </items>
+                                                    </group>
+                                                </items>
+                                            </group>
+                                        </items>
+                                    </group>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="229" y="155"/>
+        </scene>
         <!--Flight-->
         <scene sceneID="aou-V4-d1y">
             <objects>
@@ -58,4 +110,5 @@
             </objects>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.98039215690000003" green="0.066666666669999999" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
 </document>
